@@ -396,7 +396,102 @@ function exportTest (options) {
     
     testName = "parseCsv" + idx;
     try {
-      fs.read(fs.join(tmpPath, 'query.csv'));
+      let content = fs.read(fs.join(tmpPath, 'query.csv'));
+
+      results[testName] = {
+        failed: 0,
+        status: true
+      };
+    } catch (e) {
+      results.failed += 1;
+      results[testName] = {
+        failed: 1,
+        status: false,
+        message: e
+      };
+    }
+    delete args['fields'];
+    
+    print(CYAN + Date() + ': Export data (csv, escaping)' + RESET);
+    args['type'] = 'csv';
+    args['query'] = 'FOR doc IN 1..2 RETURN { value1: 1, value2: [1, 2, 3], value3: true, value4: "foobar" }';
+    args['fields'] = 'value1,value2,value3,value4';
+    
+    testName = "exportCsvEscaped" + idx;
+    results[testName] = pu.executeAndWait(pu.ARANGOEXPORT_BIN, toArgv(args), options, 'arangosh', tmpPath, false, options.coreCheck);
+    results[testName].failed = results[testName].status ? 0 : 1;
+    
+    testName = "parseCsvEscaped" + idx;
+    try {
+      let content = String(fs.read(fs.join(tmpPath, 'query.csv')));
+      const expected = `"value1","value2","value3","value4"\n1,"[1,2,3]",true,"foobar"\n1,"[1,2,3]",true,"foobar"\n`;
+      if (content !== expected) {
+        throw "contents differ!";
+      }
+
+      results[testName] = {
+        failed: 0,
+        status: true
+      };
+    } catch (e) {
+      results.failed += 1;
+      results[testName] = {
+        failed: 1,
+        status: false,
+        message: e
+      };
+    }
+    delete args['fields'];
+    
+    print(CYAN + Date() + ': Export data (csv, escaping formulae)' + RESET);
+    args['escape-csv-formulae'] = 'true';
+    args['type'] = 'csv';
+    args['query'] = 'FOR doc IN 1..2 RETURN { value1: "@foobar", value2: "=HYPERLINK(\\\"evil\\\")", value3: "\\\"some string\\\"", value4: "+line\nbreak" }';
+    args['fields'] = 'value1,value2,value3,value4';
+    
+    testName = "exportCsvEscapedFormulae" + idx;
+    results[testName] = pu.executeAndWait(pu.ARANGOEXPORT_BIN, toArgv(args), options, 'arangosh', tmpPath, false, options.coreCheck);
+    results[testName].failed = results[testName].status ? 0 : 1;
+    
+    testName = "parseCsvEscapedFormulae" + idx;
+    try {
+      let content = String(fs.read(fs.join(tmpPath, 'query.csv')));
+      const expected = `"value1","value2","value3","value4"\n"'@foobar","'=HYPERLINK(""evil"")","""some string""","'+line\nbreak"\n"'@foobar","'=HYPERLINK(""evil"")","""some string""","'+line\nbreak"\n`;
+      if (content !== expected) {
+        throw "contents differ!";
+      }
+
+      results[testName] = {
+        failed: 0,
+        status: true
+      };
+    } catch (e) {
+      results.failed += 1;
+      results[testName] = {
+        failed: 1,
+        status: false,
+        message: e
+      };
+    }
+    delete args['fields'];
+    
+    print(CYAN + Date() + ': Export data (csv, not escaping formulae)' + RESET);
+    args['escape-csv-formulae'] = 'false';
+    args['type'] = 'csv';
+    args['query'] = 'FOR doc IN 1..2 RETURN { value1: "@foobar", value2: "=HYPERLINK(\\\"evil\\\")", value3: "\\\"some string\\\"", value4: "+line\nbreak" }';
+    args['fields'] = 'value1,value2,value3,value4';
+    
+    testName = "exportCsvUnescapedFormulae" + idx;
+    results[testName] = pu.executeAndWait(pu.ARANGOEXPORT_BIN, toArgv(args), options, 'arangosh', tmpPath, false, options.coreCheck);
+    results[testName].failed = results[testName].status ? 0 : 1;
+    
+    testName = "parseCsvUnescapedFormulae" + idx;
+    try {
+      let content = String(fs.read(fs.join(tmpPath, 'query.csv')));
+      const expected = `"value1","value2","value3","value4"\n"@foobar","=HYPERLINK(""evil"")","""some string""","+line\nbreak"\n"@foobar","=HYPERLINK(""evil"")","""some string""","+line\nbreak"\n`;
+      if (content !== expected) {
+        throw "contents differ!";
+      }
 
       results[testName] = {
         failed: 0,
